--- a/bai-2/CSS/style.css
+++ b/bai-2/CSS/style.css
@@ -1,37 +1,41 @@
+
+* {
+
+	box-sizing: border-box;
+}
+
 body {
 	background-color: #E5E5E5;
 	margin: 0;
 	padding: 0;
 }
 
-h1 {
-	margin: 30px 0 10px 0;
-	color: #404040;
-	font-size: 24px;
-}
 
 #banner {
 	text-align: center;
-	margin: auto;
 }
 
+#tieude1 {
+	color: red;
+	text-align: center;
+}
 
 .gaixinh {
 	text-align: center;
 	float: left;
-	margin top: 50px;
-	border: 1px solid #dddddd;
-	border-top-width: 5px;
-	width: 300px;
-
+	margin: 6.6px;
 }
 
-.wrap{
+.wrap {
 	width: 1000px;
 	margin: auto;
 }
 
 #main-menu {
 	text-align: center;
+}
 
+.zoom-effect-container:hover .gaixinh img {
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
