--- a/bai-3/css/style.css
+++ b/bai-3/css/style.css
@@ -1,8 +1,8 @@
 #main-menu ul {
 	position: absolute;
 	background: #CE85D3;
-	width: 250px;
-	padding: 0
+	width: 150px;
+	padding: 0;
 	text-align: left;
 	list-style-type: none;
 }
@@ -32,10 +32,16 @@
 }
 
 .wrap {
-	width: 2000px;
+	width: 1000px;
 	margin: auto;
 }
 
 #noidung {
-	width: 1500px;
+	margin-left: 160px;
+}
+
+#backtotop {
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
 }
