--- a/Projekt cac khoa hoc lap trinh/css/style.css
+++ b/Projekt cac khoa hoc lap trinh/css/style.css
@@ -1,8 +1,26 @@
 
 
+.wrap {
+	max-width: 1200px;
+}
 
-@media only screen and (max-width: 500px) {
-	body {
-		
+.wrap nav {
+	width: 100%;
+}
+
+#banner {
+	width: 100%;
+}
+
+
+@media screen and (max-width: 990px) {
+    .fix{
+		height: 290px;
 	}
-} 
+}
+
+@media screen and (max-width: 780px) {
+    .fix{
+		height: 150px;
+	}
+}
