--- a/Projekt cac khoa hoc lap trinh/css/style.css
+++ b/Projekt cac khoa hoc lap trinh/css/style.css
@@ -1,26 +1,70 @@
-
-
 .wrap {
-	max-width: 1200px;
-}
-
-.wrap nav {
-	width: 100%;
-}
+	max-width: 1200px;}
 
 #banner {
-	width: 100%;
+ width: 100%;}
+
+a, a:hover { 
+  text-decoration: none;}
+
+.sign {
+  text-align: right;}   
+
+.fix {
+  background: #80D8FF;}
+
+.font {
+  font: #01579B;}
+
+.row-wrap{
+  margin: 0 !important;}
+
+@media screen and (max-width: 1280px) {
+  .fix{
+    height: 450px;
+  }
+} 
+
+@media screen and (max-width: 770px) {
+  .fix{
+    height: 300px;
+  }
+  .display {
+    display: none;
+  }
+  .sign {
+    text-align: left;
+  }
+  .ratings {
+    display: none;
+  }
 }
 
+@media screen and (max-width: 380px) {
+  .fix{
+    height: 170px;
+  }
+  .display {
+    display: none;
+  }
+  .sign {
+    text-align: left;
+  }
+  .ratings {
+    display: none;
 
-@media screen and (max-width: 990px) {
-    .fix{
-		height: 290px;
-	}
+  }
 }
 
-@media screen and (max-width: 780px) {
-    .fix{
-		height: 150px;
-	}
-}
+  
+
+
+
+
+
+
+
+
+
+
+
