--- a/Projekt cac khoa hoc lap trinh/css/style01.css
+++ b/Projekt cac khoa hoc lap trinh/css/style01.css
@@ -1,5 +1,5 @@
 .header_bg {
-	background: #01579B;
+	background: #0099CC;
 }
 
 #banner {
@@ -10,7 +10,7 @@
 	display: none;
 	width: 100%;
 	padding: 12px;
-	background: #528B86;
+	background: #01579B;
 	color: #ffffff;
 	text-transform: uppercase;
 	font-size: 16px;
@@ -76,19 +76,24 @@ ul {
 }
 
 .khoahoc {
-  background: #01579B;  
+  background: #0099CC;  
 }
 
 @media screen and (max-width: 2000px) {
   .maunen {
-	background: #01579B;
+	background: #0099CC;
 	margin: auto;
 	height: 500px;
   }	
   .doanvan {
   	text-decoration-color: blue;
   	font-size: 15px;
-  }
+  }  
+  .maunenk {
+	background: #0099CC;
+	margin: auto;
+	height: 320px;
+  }	
 } 
 
 @media screen and (max-width: 780px) {
@@ -125,7 +130,7 @@ ul {
 }
 
 .maunenchan {
-	background: #01579B;
+	background: #0099CC;
 	color: white;	
 	padding: 0px;	
 }
@@ -139,9 +144,29 @@ ul {
 }
 
 .tho {
-	background: #01579B;
+	background: #0099CC;
 	color: white;
 	text-align: center;	
+}
+
+.trang {
+  text-align: center;  
+}
+
+.allkhoahoc {
+  margin-right: 20px;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+  background-color: #003366; 
+}
+
+.maunenkh {
+	background: #0099CC;
+}
+
+.logo {
+	margin-bottom: 10px;
 }
 
 
