Projekt cal khoa hoc lap trinh
chua song

--- a/Projekt cac khoa hoc lap trinh/css/khoahoc.css
+++ b/Projekt cac khoa hoc lap trinh/css/khoahoc.css
@@ -145,7 +145,15 @@ ul {
   text-align: center; 
 }
 
+.trang {
+  float: right; 
+  background: #01579B;
+  color: white;
+}
 
+.allkhoahoc {
+  margin-right: 20px;
+}
 
 
 
