--- a/KanbanL /css/style.css
+++ b/KanbanL /css/style.css
@@ -7,3 +7,17 @@
 .chu {
 	padding-top: 10px; 
 }
+
+.collection-item: hover .badge . material-icons {
+	display: block;
+}
+
+.ui-state-highlight {
+	background-color: #fafafa;
+	height:calc(1.5rem + 20px);
+}
+
+.collection-item .badge {
+	margin-right: -10px;
+	padding-right: 0;
+}
